@@ -79,6 +79,7 @@ BA 40- [libpari] ZpXQX_roots, ZqX_roots, ZqX_liftfact, ZqX_liftroot,
    41- [libpari] hash_dbg
    42- [libpari] Qdivii
    43- GP function ellintegralmodel
+   44- [libpari] ZM_hnf_knapsack
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
